# Fonky

./: .gitignore  Cargo.toml  README.md  buildappimage.sh
qml/: main.qml
qml/lib/: FontCard.qml
qml/pages/: AboutPage.qml  FontInfoPage.qml  FontsPage.qml
src/: lib.rs  main.rs  providers.rs  tasks.rs  types.rs
